# JOE

./: .gitattributes  .gitignore  AssemblerOpt.java  DESIGN.md  HelloWorldClass.md  JOE.md  README.md  build.joe  build.xml  pom.xml
MMTk/: .classpath
bm/: .gitignore
bm/baremetal/: Makefile  Memory.cc  baremetal.properties  gcj.cc  prune.properties
bm/baremetal/eclipse/: Memory.h  bm  elf_i386.x  exception.cc  libgcj.spec
bm/baremetal/gcj/: cni.h
bm/baremetal/glibc/: stubs.c
bm/prune0/: Prune.java
classpath-0.98/: libtool
classpath-0.98/gnu/classpath/: Configuration.java  SystemProperties.java
classpath-0.98/java/applet/: Applet.java
classpath-0.98/java/awt/: GridBagConstraints.java  Toolkit.java
classpath-0.98/java/beans/: PropertyDescriptor.java
classpath-0.98/java/io/: CharArrayWriter.java  InputStreamReader.java  ObjectInputStream.java  ObjectOutputStream.java  ObjectStreamClass.java  StreamTokenizer.java
classpath-0.98/java/lang/: Package.java  Thread.java
classpath-0.98/java/math/: BigInteger.java
classpath-0.98/java/net/: DatagramSocket.java  DatagramSocketImpl.java  Inet4Address.java  InetAddress.java  NetworkInterface.java  ResolverCache.java  ServerSocket.java  Socket.java  URLClassLoader.java  URLConnection.java
classpath-0.98/java/nio/: ByteBuffer.java  CharBuffer.java
classpath-0.98/java/text/: Collator.java  DecimalFormatSymbols.java
classpath-0.98/java/util/: AbstractMap.java  Currency.java  EnumSet.java  Formatter.java  PriorityQueue.java  ResourceBundle.java  TimeZone.java  Timer.java
components/: components.properties
docker/: Dockerfile
grub/: grub.cfg
jam-src/org/dhcp4java/: DHCPBadPacketException.java  DHCPOption.java  DHCPPacket.java  Util.java
jam/boards/: README
jam/drivers/apic/: README
jam/drivers/block/: README
jam/drivers/char/: README
jam/drivers/console/: README
jam/drivers/i2c/: README
jam/drivers/net/: README
jam/drivers/serial/: README
jam/drivers/usb/: README
jam/tests/: TwoLongDivide.java
jikesrvm/: .gitignore
jikesrvm-hg/: .classpath  .gitignore  .hgtags  RVM.map  build.xml
jikesrvm-hg/components/: components.properties
jikesrvm-hg/rvm/src/: Dummy.java
jikesrvm-hg/tools/bootImageWriter/: jam.lds
joeq_core/: .classpath  .cvsignore  Makefile  maven.xml  project.properties  project.xml
joeq_core/eclipse/: format.xml  preferences.epf
joeq_core/joeq/Allocator/: .gitignore  ObjectLayout.java
joeq_core/joeq/Class/: .gitignore  NullDelegates.java  PrimordialClassLoader.java  jq_Array.java  jq_BytecodeMap.java  jq_Class.java  jq_ClassFileConstants.java  jq_ClassInitializer.java  jq_CompiledCode.java  jq_ConstantPool.java  jq_DontAlign.java  jq_FakeInstanceMethod.java  jq_FakeStaticMethod.java  jq_Field.java  jq_FieldVisitor.java  jq_Initializer.java  jq_InstanceField.java  jq_InstanceMethod.java  jq_LineNumberBC.java  jq_LocalVarTableEntry.java  jq_Member.java  jq_MemberReference.java  jq_Method.java  jq_MethodVisitor.java  jq_NameAndDesc.java  jq_Primitive.java  jq_Reference.java  jq_StaticField.java  jq_StaticMethod.java  jq_TryCatch.java  jq_TryCatchBC.java  jq_Type.java  jq_TypeVisitor.java
joeq_core/joeq/ClassLib/: .gitignore  ClassLibInterface.java
joeq_core/joeq/Compiler/: .gitignore  CompilationConstants.java  CompilationState.java  CompilerInterface.java
joeq_core/joeq/Interpreter/: .gitignore  BytecodeInterpreter.java  QuadInterpreter.java  ReflectiveInterpreter.java
joeq_core/joeq/Main/: .gitignore  ClassDump.java  ClassName.java  ClasspathWalker.java  Driver.java  FindBestPermutation.java  GenRelations.java  GenerateWebRoots.java  GetBootClassPath.java  Hello.java  Helper.java  HostedVM.java  Instrument.java  PrintCFG.java  TraceFlags.java  jq.java  methods.txt  reflection.spec
joeq_core/joeq/Memory/: .gitignore  Address.java  CodeAddress.java  HeapAddress.java  StackAddress.java
joeq_core/joeq/Runtime/: .gitignore  Arrays.java  BasicDebugImpl.java  BasicReflectionImpl.java  Debug.java  MathSupport.java  ObjectTraverser.java  Reflection.java  SilentDebugImpl.java  TypeCheck.java
joeq_core/joeq/Support/: .gitignore  JMath.java
joeq_core/joeq/UTF/: .gitignore  UTFDataFormatError.java  Utf8.java
joeq_core/joeq/Util/: .gitignore  DescriptorUtil.java  MakeProxy.java  NameMunger.java
joeq_core/xdocs/: compiling.xml  eclipse_setup.xml  faq.fml  getting_started.xml  index.xml  navigation.xml  news.xml  project_status.xml
joeq_core/xdocs/about/: address_types.xml  bootstrapping.xml  compiler.xml  garbage_collector.xml  index.xml  other_os_java.xml  related_work.xml  scheduler.xml  synchronization.xml
joeq_loader/: .cdtproject  Makefile  StdAfx.h  context.h  exception.c  handler.h  joeq native.launch  joeq.c  joeq.dsp  native.c  native.h  set_text_writeable.c
joeq_loader/.externalToolBuilders/CVS/: Repository  Root
joeq_loader/CVS/: Entries  Repository
joeq_native/: .classpath  .cvsignore  Bootstrap.launch  project.properties  project.xml
joeq_native/joeq/Allocator/: .gitignore  AddressQueue.java  CircularAddressQueue.java  CodeAllocator.java  DefaultCodeAllocator.java  HeapAllocator.java  (+5 more)
joeq_x86/: .classpath  project.xml
scripts/: djoe_x86  djoe_x86_64  lijoe_x86_64  ljoe  ljoe_x86_64  mkdisk  rjoe_x86  rjoe_x86_64  tap-down  tap-up
settings/: joe.classpath  joe.project
src/: .gitignore  AttributeInfo.cpp  AttributeInfo.h  ClassFile.cpp  ClassFile.h  ConstantPool.cpp  ConstantPool.h  Fields.cpp  Fields.h  Filter.cpp  Filter.h  Interfaces.cpp  Interfaces.h  Makefile  Methods.cpp  Methods.h  ZipArchive.cpp  ZipArchive.h  ZipFile.cpp  ZipFile.h  access_flags.h  jei.cpp  test.cpp  vmjc.cpp
tools/: ecj
vmkit/: CREDITS.TXT  LICENSE.TXT  Makefile  Makefile.common  Makefile.common.in  Makefile.config  Makefile.config.in  Makefile.llvm.common  Makefile.llvm.config  Makefile.llvm.config.orig  Makefile.llvm.rules  Makefile.rules  bashrc  configure
vmkit/autoconf/: AutoRegen.sh  configure.ac
vmkit/include/: debug.h  types.h
vmkit/lib/: Makefile
vmkit/mmtk/: Makefile
vmkit/tools/: Makefile
zip-utils/: readme.txt  zip.cpp  zip.h
(+1935 files in other folders)
